chore: Add meta description to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo App</title>
+    <meta
+      name="description"
+      content="This project is a complete app where you can add task, remove tasks, and edit them"
+    />
   </head>
   <body>
     <div id="root"></div>
